Fixed the blurry border issue

--- a/src/App/components/Workspace/Workspace.css
+++ b/src/App/components/Workspace/Workspace.css
@@ -3,8 +3,3 @@
     background-color: #fff;
     display: flex;
 }
-
-.canvas {
-    width: 100%;
-    height: 100%;
-}
